[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/heart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Attacks/Phase2/CardPlay/Party/party.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "put_card"

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 510, -20, 28.302, -312.24, -28.302, 312.24, 865, 315, 69.5511, -13.8075, -69.5511, 13.8075, 505, 615, -53.7633, 278.086, 53.7633, -278.086, 175, 245, 0, 0, 0, 0, 510, -20 )
}

[node name="Party" type="Node2D"]
script = ExtResource( 2 )

[node name="BorderField" type="ColorRect" parent="."]
margin_left = 330.0
margin_top = 80.0
margin_right = 750.0
margin_bottom = 475.0

[node name="Field" type="ColorRect" parent="BorderField"]
margin_left = 10.0
margin_top = 10.0
margin_right = 410.0
margin_bottom = 385.0
color = Color( 0, 0, 0, 1 )

[node name="Area2D" type="Area2D" parent="BorderField"]

[node name="Heart" parent="." instance=ExtResource( 1 )]
position = Vector2( 580, 272 )

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/put_card = SubResource( 1 )

[node name="CardSpawn" type="Path2D" parent="."]
position = Vector2( -110, 9.99999 )
scale = Vector2( 1.23836, 0.924237 )
curve = SubResource( 2 )

[node name="CardSpawnLocation" type="PathFollow2D" parent="CardSpawn"]
position = Vector2( 510, -20 )
rotation = 0.0770988

[node name="TableCenter" type="Node2D" parent="."]
position = Vector2( 540, 265 )
